css and class changes

--- a/i18n/de_DE.CSV
+++ b/i18n/de_DE.CSV
@@ -35,7 +35,7 @@ Book,Book
 "Booking Time Expired","Booking Time Expired"
 "Can not configure booking.","Can not configure booking."
 View,View
-"Select Slot To Book","Select Slot To Book"
+"Select time slot for booking","Select time slot for booking"
 "Available Slots","Available Slots"
 "Unavailable Slots","Unavailable Slots"
 "Booked Slots","Booked Slots"
